<resources>
    <string name="app_name">Final Countdown</string>
    <string name="set_time">Time:</string>
    <string name="set_date">Date:</string>
    <string name="previous_dates">Previous dates:</string>
    <string name="set_new_countdown">SET NEW COUNTDOWN</string>
    <string name="send_email">Em@il me</string>
    <string name="to_date">To date:</string>
    <string name="to_go">To go:</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="s">s</string>
    <string name="d">d</string>
    <string name="y">y</string>
    <string name="formatting">Y %1$d. M %2$d. D %3$d / h %4$d: m %5$d: s %6$d</string>
    <string name="error">Please fill in the blank field</string>
    <string name="dd_mm_yy">dd.MMM.yyyy / h:mm:ss a</string>
    <string name="subject">Time remaining</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="incorrect_date">Incorrect date</string>
    <string name="inserted">Date inserted</string>
    <string name="not_inserted">Date not inserted</string>
    <string name="error_h_max">Hours can`t be bigger than 12</string>
    <string name="error_h_min">Hours can`t be less than 1</string>
    <string name="error_m">Minutes can`t be bigger than 59</string>
    <string name="error_s">Seconds can`t be bigger than 59</string>
    <string name="error_d_max">Day can`t be bigger than 31</string>
    <string name="error_d_min">Day can`t be less than 1</string>
    <string name="error_mnth_max">Month can`t be bigger than 12</string>
    <string name="error_mnth_min">Month can`t be less than 1</string>
    <string name="error_ymax">Can`t be bigger than 6000</string>
    <string name="error_ymin">Can`t be less than 1</string>
</resources>
